[gd_scene load_steps=8 format=3 uid="uid://b5mn8qr3xw4k7"]

[ext_resource type="Script" path="res://src/ui/SettingsMenu.gd" id="1_settings"]
[ext_resource type="Script" path="res://src/ui/components/SidebarMenu.gd" id="2_sidebar"]
[ext_resource type="Script" path="res://src/ui/components/ModernSlider.gd" id="3_slider"]
[ext_resource type="Script" path="res://src/ui/components/SegmentedButton.gd" id="4_segmented"]
[ext_resource type="Script" path="res://src/ui/components/StyledToggle.gd" id="5_toggle"]

[sub_resource type="Shader" id="Shader_blur"]
code = "shader_type canvas_item;

uniform sampler2D screen_texture : hint_screen_texture, filter_linear_mipmap;
uniform float blur_amount : hint_range(0.0, 5.0) = 2.0;
uniform float darkness : hint_range(0.0, 1.0) = 0.4;

void fragment() {
	vec4 color = vec4(0.0);

	// Simple box blur
	int samples = 9;
	float offset = blur_amount / 512.0;

	for(int x = -1; x <= 1; x++) {
		for(int y = -1; y <= 1; y++) {
			color += texture(screen_texture, SCREEN_UV + vec2(float(x), float(y)) * offset);
		}
	}

	color /= float(samples);

	// Apply darkness overlay
	color.rgb *= (1.0 - darkness);

	COLOR = color;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_blur"]
shader = SubResource("Shader_blur")
shader_parameter/blur_amount = 3.5
shader_parameter/darkness = 0.3

[node name="SettingsMenu" type="CanvasLayer" groups=["settings_menu"]]
process_mode = 3
layer = 100
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_blur")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 1)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Sidebar" type="PanelContainer" parent="Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="SidebarMenu" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Sidebar"]
layout_mode = 2
script = ExtResource("2_sidebar")

[node name="Content" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.95, 0.85, 1)
theme_override_font_sizes/font_size = 32
text = "⚙ Game Settings"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/Content/Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "×"
flat = true

[node name="Separator" type="HSeparator" parent="Panel/MarginContainer/HBoxContainer/Content"]
modulate = Color(0.8, 0.6, 0.3, 0.3)
layout_mode = 2

[node name="Categories" type="Control" parent="Panel/MarginContainer/HBoxContainer/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="SoundSettings" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 15

[node name="MasterVolume" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings/MasterVolume"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_font_sizes/font_size = 18
text = "Master Volume"

[node name="HBox" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings/MasterVolume"]
layout_mode = 2

[node name="Slider" type="HSlider" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings/MasterVolume/HBox"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0
script = ExtResource("3_slider")

[node name="ValueLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings/MasterVolume/HBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "100%"
horizontal_alignment = 2

[node name="MusicVolume" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings/MusicVolume"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_font_sizes/font_size = 18
text = "Music Volume"

[node name="HBox" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings/MusicVolume"]
layout_mode = 2

[node name="Slider" type="HSlider" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings/MusicVolume/HBox"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 70.0
script = ExtResource("3_slider")

[node name="ValueLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings/MusicVolume/HBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "70%"
horizontal_alignment = 2

[node name="SFXVolume" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings/SFXVolume"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_font_sizes/font_size = 18
text = "SFX Volume"

[node name="HBox" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings/SFXVolume"]
layout_mode = 2

[node name="Slider" type="HSlider" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings/SFXVolume/HBox"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 80.0
script = ExtResource("3_slider")

[node name="ValueLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/SoundSettings/SFXVolume/HBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "80%"
horizontal_alignment = 2

[node name="GraphicsSettings" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 15

[node name="ShadowQuality" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GraphicsSettings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GraphicsSettings/ShadowQuality"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_font_sizes/font_size = 18
text = "Shadow Quality"

[node name="SegmentedButton" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GraphicsSettings/ShadowQuality"]
layout_mode = 2
script = ExtResource("4_segmented")

[node name="Toggles" type="GridContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GraphicsSettings"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 15
columns = 2

[node name="VSync" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GraphicsSettings/Toggles"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GraphicsSettings/Toggles/VSync"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_font_sizes/font_size = 16
text = "V-Sync"

[node name="Toggle" type="Button" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GraphicsSettings/Toggles/VSync"]
layout_mode = 2
script = ExtResource("5_toggle")
is_on = true

[node name="Fullscreen" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GraphicsSettings/Toggles"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GraphicsSettings/Toggles/Fullscreen"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_font_sizes/font_size = 16
text = "Fullscreen"

[node name="Toggle" type="Button" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GraphicsSettings/Toggles/Fullscreen"]
layout_mode = 2
script = ExtResource("5_toggle")

[node name="ShowFPS" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GraphicsSettings/Toggles"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GraphicsSettings/Toggles/ShowFPS"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_font_sizes/font_size = 16
text = "Show FPS"

[node name="Toggle" type="Button" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GraphicsSettings/Toggles/ShowFPS"]
layout_mode = 2
script = ExtResource("5_toggle")
is_on = true

[node name="ColorSettings" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 15

[node name="ThemeColor" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/ColorSettings"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/ColorSettings/ThemeColor"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_font_sizes/font_size = 18
text = "Theme Color"

[node name="Description" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/ColorSettings/ThemeColor"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.65, 0.55, 0.8)
theme_override_font_sizes/font_size = 14
text = "Choose a color theme for the UI"

[node name="ThemeButtons" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/ColorSettings/ThemeColor"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AboutSettings" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 20

[node name="GameInfo" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/AboutSettings"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/AboutSettings/GameInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.95, 0.85, 1)
theme_override_font_sizes/font_size = 28
text = "🍴 Restaurant Flows"
horizontal_alignment = 1

[node name="Version" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/AboutSettings/GameInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "Version 1.0.0"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/AboutSettings/GameInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.65, 0.55, 0.9)
theme_override_font_sizes/font_size = 14
text = "A 3D restaurant management game
Cook, serve, and manage your restaurant!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Separator" type="HSeparator" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/AboutSettings"]
modulate = Color(0.8, 0.6, 0.3, 0.3)
layout_mode = 2

[node name="Links" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/AboutSettings"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="LinksTitle" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/AboutSettings/Links"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_font_sizes/font_size = 20
text = "Information"

[node name="TermsButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/AboutSettings/Links"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "📄 Terms & Conditions"
flat = true
alignment = 0

[node name="HelpButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/AboutSettings/Links"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "❓ Help & Support"
flat = true
alignment = 0

[node name="CreditsButton" type="Button" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/AboutSettings/Links"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "👥 Credits"
flat = true
alignment = 0

[node name="GUISettings" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 15

[node name="GUIScale" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GUISettings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GUISettings/GUIScale"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_font_sizes/font_size = 18
text = "GUI Scale"

[node name="HBox" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GUISettings/GUIScale"]
layout_mode = 2

[node name="Slider" type="HSlider" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GUISettings/GUIScale/HBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.8
max_value = 1.5
step = 0.1
value = 1.0
script = ExtResource("3_slider")

[node name="ValueLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/Content/Categories/GUISettings/GUIScale/HBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "1.0x"
horizontal_alignment = 2

